fix jelly bean and alert on ios

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -284,7 +284,10 @@ body{
 	bottom:0;
 	right:0;
 	z-index: 9999;
-	visibility:hidden;
+	opacity:0;
+	z-index: -1;
+	transition: all 300ms ease-out;
+	-webkit-transition: all 300ms ease-out;
 	.sidebar-mobile-overlay{
 		position:fixed;
 		top:0;
@@ -363,13 +366,100 @@ body{
 		}
 	}
 	&.active{
-		visibility: visible;
+		opacity: 1;
+		z-index: 9999;
 		.sidebar-mobile-overlay{
 			opacity: 1;
 		}
 		.sidebar-mobile-content{
 			transform:translate(0,0);
 			-webkit-transform:translate(0,0);
+		}
+	}
+}
+.error-alert{
+	position:fixed;
+	top:0;
+	left:0;
+	bottom:0;
+	right:0;
+	background:rgba(0,0,0,0.7);
+	z-index: -1;
+	opacity:0;
+	transition: all 100ms ease-out;
+	-webkit-transition: all 100ms ease-out;
+	.box{
+		position:absolute;
+		top:50%;
+		left:50%;
+		transform: translate(-50%,-50%) scale(0.7);
+		-webkit-transform: translate(-50%,-50%) scale(0.7);
+		opacity: 0;
+		background:#fff;
+		border-radius:2px;
+		-webkit-border-radius:2px;
+		text-align: center;
+		padding:30px;
+		min-width: 80%;
+		transition: all 300ms ease-out;
+		-webkit-transition: all 300ms ease-out;
+		h4{
+			margin-bottom: 30px;
+			@extend .font-ultralight;
+			letter-spacing: 1px;
+		}
+		.btn{
+			height: 50px;
+			line-height: 50px;
+			background:none;
+			color:#3498db;
+			margin:30px -30px -30px;
+			display: block;
+			border:none;
+			border-top:1px solid #eee;
+			width: auto;
+			text-decoration: none!important;
+			&:active{
+				background:#eee;
+			}
+		}
+	}
+	&.in{
+		opacity: 1;
+		z-index: 99999;
+		.box{
+			transform: translate(-50%,-50%) scale(1);
+			-webkit-transform: translate(-50%,-50%) scale(1);	
+			opacity: 1;		
+		}
+	}
+}
+.slick-slider{
+	position:relative;
+	.slick-slide{
+		text-align: center;
+	}
+	.slick-arrow{
+		position:absolute;
+		top:50%;
+		transform:translate(0,-50%);
+		-webkit-transform:translate(0,-50%);
+		border:none;
+		background:none;
+		font-size:1.5em;
+		color:#fff;
+		z-index: 999;
+		outline: none;
+		display: block;
+		width: 50px;
+		height: 50px;
+		line-height: 50px;
+		text-align: center;
+		&.prev{
+			left:15px;
+		}
+		&.next{
+			right:15px;
 		}
 	}
 }
